Clone random repository given a list

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,12 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "node_modules/.pnpm/vitest@2.1.3_@types+node@20.16.11_jsdom@25.0.1/node_modules/vitest/globals.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
