--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "14.2.15",
+    "octokit": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "simple-git": "^3.27.0"
